# diy-microphone

./: .gitignore  Cargo.toml  DIY Microphone.kicad_prl  DIY Microphone.kicad_pro  DIY Microphone.kicad_sch  audio.kicad_sch
.cargo/: config
.github/workflows/: ci.yml
electrical/: DIY Microphone.kicad_pro  DIY Microphone.kicad_sym  sym-lib-table
firmware/: Cargo.toml
firmware/cross/: Cargo.toml
firmware/cross/.cargo/: config.toml
firmware/cross/app/: Cargo.toml  memory.x
firmware/cross/app/src/: init.rs
firmware/cross/bsp/: Cargo.toml
firmware/cross/self-tests/: Cargo.toml
firmware/cross/self-tests/tests/: audio.rs
firmware/host-target-tests/: Cargo.toml
firmware/messaging/: Cargo.toml
firmware/src/: init.rs  main.rs  tasks.rs
firmware/src/tasks/: blink.rs  stream.rs
svd/: ATSAME54P20A.svd
