[package]
name = "diy-microphone"
version = "0.1.0"
authors = ["John Little <johngigantic@gmail.com>"]
edition = "2021"
rust-version = "1.72"
description = "USB Microphone"
readme = "../README.md"
repository = "https://github.com/johngigantic/diy-microphone"
license = "MIT OR Apache-2.0"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal", "audio"]
categories = ["no-std", "embedded", "multimedia::audio"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2"
atsame54p = { version = "0.12" }
atsamd-hal = { version = "0.16", default_features = false, features = ["same54p", "same54p-rt", "unproven", "dma"] }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7" }
rtic = { version = "2.0", features = ["cortex-m", "thumbv7-backend"] }

[dev-dependencies]
panic-semihosting = "0.6.0"

[features]
