[package]
name = "microphone-bsp"
version = "0.1.0"
authors = ["John Little <johngigantic@gmail.com>"]
edition = "2021"
rust-version = "1.72"
description = "USB Microphone board support package"
repository = "https://github.com/johngigantic/diy-microphone"
license = "MIT OR Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# makes `cargo check --all-targets` (used by Rust-Analyzer) work
[lib]
bench = false
doctest = false
test = false

[dependencies]
cortex-m = "0.7.4"
defmt = "0.3.5"
atsamd-hal = "0.16.0"

[features]
# these features are required by defmt
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []