[package]
authors = ["John Little <johngigantic@gmail.com>"]
edition = "2018"
name = "self-tests"
publish = false
version = "0.1.0"

[[test]]
name = "audio"
harness = false

[dev-dependencies]
atsame54_xpro = { version = "0.6", features = ["usb"] }
cortex-m = "0.7.4"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
defmt-test = "0.3.1"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }

[features]
default = ['defmt-trace']
# these features are required by defmt
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []